admission/validatingAdmissionPolicies/policies/startupprobe-httpget-host/containers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-containers-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d031a58e-7ed4-51ed-967a-6dd92d19a55e
  labels:
    pss.security.kolteq.com/warn: 'baseline,restricted'
    startupprobe-httpget-host-containers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/audit: 'false,true'
    startupprobe-httpget-host-containers.security.kolteq.com/enforce: 'false,true'
spec:
  policyName: startupprobe-httpget-host-containers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: startupprobe-httpget-host-containers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-containers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d031a58e-7ed4-51ed-967a-6dd92d19a55e
  labels:
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/audit: 'false,true'
    startupprobe-httpget-host-containers.security.kolteq.com/enforce: 'false,true'
spec:
  policyName: startupprobe-httpget-host-containers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: startupprobe-httpget-host-containers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-containers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d031a58e-7ed4-51ed-967a-6dd92d19a55e
  labels:
    startupprobe-httpget-host-containers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/audit: 'false,true'
    startupprobe-httpget-host-containers.security.kolteq.com/enforce: 'false,true'
spec:
  policyName: startupprobe-httpget-host-containers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: startupprobe-httpget-host-containers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-containers-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d031a58e-7ed4-51ed-967a-6dd92d19a55e
  labels:
    pss.security.kolteq.com/audit: 'baseline,restricted'
    startupprobe-httpget-host-containers.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/enforce: 'false,true'
    startupprobe-httpget-host-containers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: startupprobe-httpget-host-containers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: startupprobe-httpget-host-containers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-containers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d031a58e-7ed4-51ed-967a-6dd92d19a55e
  labels:
    security.kolteq.com/audit: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/enforce: 'false,true'
    startupprobe-httpget-host-containers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: startupprobe-httpget-host-containers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: startupprobe-httpget-host-containers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-containers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d031a58e-7ed4-51ed-967a-6dd92d19a55e
  labels:
    startupprobe-httpget-host-containers.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/enforce: 'false,true'
    startupprobe-httpget-host-containers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: startupprobe-httpget-host-containers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: startupprobe-httpget-host-containers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-containers-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d031a58e-7ed4-51ed-967a-6dd92d19a55e
  labels:
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    startupprobe-httpget-host-containers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/audit: 'false,true'
    startupprobe-httpget-host-containers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: startupprobe-httpget-host-containers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: startupprobe-httpget-host-containers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-containers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d031a58e-7ed4-51ed-967a-6dd92d19a55e
  labels:
    security.kolteq.com/enforce: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/audit: 'false,true'
    startupprobe-httpget-host-containers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: startupprobe-httpget-host-containers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: startupprobe-httpget-host-containers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-containers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d031a58e-7ed4-51ed-967a-6dd92d19a55e
  labels:
    startupprobe-httpget-host-containers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/audit: 'false,true'
    startupprobe-httpget-host-containers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: startupprobe-httpget-host-containers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: startupprobe-httpget-host-containers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
