admission/validatingAdmissionPolicies/policies/startupprobe-httpget-host/containers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: startupprobe-httpget-host-containers
  annotations:
    security.kubeapt.io/displayName: 'Startupprobe Httpget Host'
    security.kubeapt.io/description: ValidatingAdmissionPolicy for startupprobe-httpget-host/containers.
    security.kubeapt.io/resource: Containers
    security.kubeapt.io/severity: "3"
    security.kubeapt.io/remediation: Adjust workloads to satisfy the startupprobe-httpget-host/containers policy.
    policies.kolteq.com/validatingAdmissionPolicy: d031a58e-7ed4-51ed-967a-6dd92d19a55e
  labels:
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-containers.security.kolteq.com/audit: 'false-true'
    startupprobe-httpget-host-containers.security.kolteq.com/enforce: 'false-true'
    startupprobe-httpget-host-containers.security.kolteq.com/warn: 'false-true'
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        object.spec.containers.all(c,
          !has(c.startupProbe) ||
          !has(c.startupProbe.httpGet) ||
          !has(c.startupProbe.httpGet.host) ||
          c.startupProbe.httpGet.host == ""
        )
      message: >
        spec.containers[*].startupProbe.httpGet.host must be undefined or empty ("").
